<resources>
    <string name="app_name">Finance Tracker v2</string>
    <string name="chat_welcome_message">Olá! Bem vindo ao Finance Tracker. O melhor lugar para organizar seus investimentos.</string>
    <string name="chat_request_name_message">Como podemos te chamar?</string>
    <string name="nome">Nome</string>
    <string name="enviar">Enviar</string>
    <string name="invalid_blanck_name">Seu nome está vazio!</string>
    <string name="invalid_short_name">Seu nome está muito curto! Pelo menos 3 letras OK?</string>
    <string name="want_to_add_password">Você gostaria de adicionar uma senha para acessar o aplicativo? Caso não queira agora, pode adicionar depois, sem problemas!</string>
    <string name="certo">Certo</string>
    <string name="you_are_close_to_use_our_app">você está muito perto de começar a usar nosso aplicativo!</string>
    <string name="sim">Sim</string>
    <string name="not_now">Agora não</string>
    <string name="cert_start_using_app_now">Certo, tudo pronto então!</string>
    <string name="chat_security_message_to_ease_user">Só lembrando que nós usamos um banco de daods local, então nehuma informação sua será colocada em risco.</string>
    <string name="enter">Entrar</string>
    <string name="no">Não</string>
    <string name="Insert_password">Insira a senha por favor.</string>
    <string name="password">Senha</string>
    <string name="weak_password">Senha muito fraca</string>
    <string name="min_3_chars">Mínimo de 3 caracteres</string>
    <string name="password_saved">Sua senha foi salva com sucesso!</string>
    <string name="i_want_to_add_password">Sim, gostaria de manter o aplicativo com maior privacidade.</string>
    <string name="preference_file_key">com.bacchoterra.financetrackerv2.file_key</string>
    <string name="saved_user_name">shared_prefs_saved_user_name</string>
    <string name="saved_user_password">shared_prefs_saved_user_password</string>
    <string name="saved_user_name_default_value">User</string>
    <string name="splash_image">Imagem splash</string>
    <string name="btn_access">Botão de acesso</string>
    <string name="wrong_pasword">Senha incorreta</string>
    <string name="dashboard">Dashboard</string>
    <string name="information">Informações</string>
    <string name="profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Salvar</string>
    <string name="total_invested">Total investido:</string>
    <string name="total_profit">Lucro total:</string>
    <string name="monthly_profits">Lucros mensais</string>
    <string name="fixed_type">Renda fixa</string>
    <string name="stock_type">Renda variável</string>
    <string name="fund_type">Fundos</string>
    <string name="hello_message">Olá, %1$s</string>
    <string name="add">+ Adicionar</string>
    <string name="oper_o_comprada">Operação comprada</string>
    <string name="opera_o_vendida">Operação vendida</string>
    <string name="quantity">Quantidade</string>
    <string name="Name">Nome</string>
    <string name="Date">Data</string>
    <string name="Broker">Corretora</string>
    <string name="expected_invested_time">Tempo esperado de investimento</string>
    <string name="technique_used">Técnica de avaliação</string>
    <string name="value">Valor</string>
    <string name="ltima_renda_v_riavel">Última renda váriavel</string>
    <string name="ver_todas">Ver todas</string>
    <string name="optional_information">Informações opcionais</string>
    <string name="stock_information">Informações do ativo</string>
    <string name="operation_type">Tipo da opreção</string>
    <string name="min_quantity">Mínimo de 0.1</string>
    <string name="obligatory_field">Campo obrigatorio</string>
    <string name="min_value">Mínimo de R$ 1.00</string>
    <string name="basic_information">Informações básicas</string>
    <string name="add_basic_information">Adicione as informações básicas da operação</string>
    <string name="stock_name">Nome da ação</string>
    <string name="add_broker">%1$s Adicionar corretora</string>
    <string name="add_expected_time">%1$s Adicionar tempo de investimento</string>
    <string name="add_technique">%1$s Adicionar técninca de análise</string>
    <string name="ecpected_time">Tempo esperado</string>
    <string name="stock_technique">Técninca de análise</string>
    <string name="select_stock_type">Selecione um tipo</string>
    <string name="hint_stock_name">IBOV</string>
    <string name="hint_date_input">dd/MM/yyyy</string>
    <string name="hint_money_input">R$ xxx.xx</string>
    <string name="hint_quantity_input">250</string>
    <string name="error_stock_name">Nome inválido</string>
    <string name="error_invalid_stock_type">Selecione um tipo de operação</string>
    <string name="error_invalid_date">Insira uma data válida</string>
    <string name="error_invalid_stock_price">Insira um valor maior que R$ 0.00</string>
    <string name="error_invalid_stock_quantity">Insira um número maior que 0</string>
    <string name="x_papeis">%1$d papéis</string>
    <string name="money_symbol_price">%1$s</string>
    <string name="first_buy">Primeira compra</string>
    <string name="history">História</string>
    <string name="broker_and_type">%1$s ,%2$s</string>
    <string name="type_only">%1$s</string>
    <string name="quant_x">Quant. %1$d</string>
    <string name="not_defined">Não definido</string>
    <string name="bought">Compra</string>
    <string name="sold">Venda</string>
    <string name="Add">Adicionar</string>
    <string name="add_buy">Adicionar compra</string>
    <string name="add_sell">Adicionar venda</string>
    <string name="stock_history_type_date">%1$s (%2$s)</string>
    <string name="stock_history_quant_price">%1$d papéis de R$ %2$.2f</string>
    <string name="filter">Filtrar</string>
    <string name="search">Procurar</string>
    <string name="label_greet_user">%1$s , %2$s</string>
    <string name="good_morning">Bom dia</string>
    <string name="good_afternoon">Boa tarde</string>
    <string name="good_evening">Boa noite</string>
    <string name ="label_day_month_year">%1$d %2$s %3$d</string>
    <string name="todas_acoes">Todas</string>
    <string name="pre_o_total_maior_menor">Preço total (maior-menor)</string>
    <string name="pre_o_a_o_maior_menor">Preço total (menor-maior)</string>
    <string name="somente_finalizadas">Somente finalizadas</string>
    <string name="somente_abertas">Somente abertas</string>
    <string name="label_value_mask">●●●●●</string>
    <string name="o_valor_da_venda_n_o_pode_ser_maior_que_o_valor_total">O valor da venda não pode ser maior que o valor total</string>
    <string name="label_day_variation_only">%1$.2f %%</string>
    <string name="label_day_variation_with_text">Var. dia %1$.2f %%</string>
    <string name="label_max_day">Max. dia R$ %1$.2f</string>
    <string name="label_min_day">Min. dia R$ %1$.2f</string>
    <string name="label_current_value">Valor atual R$ %1$.2f</string>
    <string name="opened_Stocks">Ações abertas</string>
    <string name="articles">Artigos</string>
    <string name="investidos_estudioso">Investidos estudioso</string>
    <string name="balance">Balanço</string>
    <string name="procurar_a_o">Procurar ação</string>
    <string name="minhas_a_es">Minhas ações</string>
    <string name="nova">+ Nova</string>
    <string name="label_articles">Artigos</string>
    <string name="stocks">Ações</string>
    <string name="label_quick_access">Quick access</string>
    <string name="label_month_display_name_and_year">%1$s %2$d</string>
</resources>