<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/dashboard"
        android:checked="true"
        android:enabled="true"
        android:id="@+id/btm_nav_main_menu_dashboard"
        app:iconTint="@color/secondaryColorVariant"
        android:icon="@drawable/ic_baseline_dashboard_24"
        />
    <item
        android:title="@string/information"
        android:enabled="true"
        android:id="@+id/btm_nav_main_menu_info"
        app:iconTint="@color/secondaryColorVariant"
        android:icon="@drawable/ic_baseline_info_24"
        />
    <item
        android:title="@string/profile"
        android:enabled="true"
        android:id="@+id/btm_nav_main_menu_profile"
        app:iconTint="@color/secondaryColorVariant"
        android:icon="@drawable/ic_baseline_person_24"
        />

</menu>